--- a/employee-directory/package.json
+++ b/employee-directory/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "react_employee_directory",
+  "name": "employee-directory",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.1.2",
-    "axios": "^0.19.0",
-    "express": "^4.17.1",
-    "materialize-css": "^1.0.0-rc.2",
-    "moment": "^2.24.0",
-    "morgan": "^1.9.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-moment": "^0.9.7",
-    "react-scripts": "3.3.0"
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
